# api-doc

./: .env  .gitignore  Cargo.toml  README.md  curl.txt  docker-compose.yml
migration/src/: lib.rs  m20250324_012019_add_test_column_to_table.rs  m20250325_000311_fix_user_table.rs  m20250327_025117_add_patient_schema.rs  m20250401_031514_add_patient_metadata.rs  m20250407_035528_create_base_schema.rs  m20250424_233306_create_base_schema.rs
src/: lib.rs  main.rs  settings.rs
src/api/: mod.rs  v1.rs
src/api/handlers/: create_patient_handler.rs  create_user.rs  delete_patient_handler.rs  get_patient_handler.rs  hello.rs  jwt.rs  list_patients_handler.rs  login.rs  login_handler.rs  mod.rs  update_patient_handler.rs
src/api/middleware/: json.rs  jwt.rs
src/api/request/: create_patient_request.rs  list_patients.rs  login.rs  login_request.rs  mod.rs  update_patient_request.rs
src/api/response/: create_patient_response.rs  error.rs  list_patients.rs  login_response.rs  mod.rs
src/commands/: check.rs  create_user.rs  hello.rs  migrate.rs  mod.rs  serve.rs
src/entities/: mod.rs  patient.rs  user.rs
