[package]
name = "api-doc"
version = "0.1.0"
edition = "2021"

[dependencies]
# Convenience crates for project setup
anyhow = "1.0.97" # Elegant error handling
clap = "4.5" # Command line argument parsing

# Configuration management
config = "0.15" # Primary config tooling
dotenv = "0.15.0" # A cleaner way to use .env files

# Data marshalling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Runtime and framework
tokio = { version = "1", features = ["full"] } # Async runtime
axum = { version = "0.6" } # Web framework
arc-swap = { version = "1.7" } # Making Rust more Rusty

# Observability
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.1" }
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tower-http = { version = "0.3.5", features = ["trace"] }

# Persistence
sea-orm = { version = "1.1.*", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
migration = { path = "./migration" } # CLI-generated migration dir
