[package]
name = "api-doc"
version = "0.1.0"
edition = "2021"

[dependencies]
# Convenience crates for project setup
anyhow = "1.0.97" # Elegant error handling
clap = "4.5" # Command line argument parsing
uuid = { version = "1.16", features = ["v4", "serde"] } 
regex = "1.11"

# Configuration management
config = "0.15" # Primary config tooling
dotenv = "0.15.0" # A cleaner way to use .env files

# Data marshalling
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Runtime and framework
tokio = { version = "1", features = ["full"] } # Async runtime
axum = { version = "0.6", features = ["macros"] } # Web framework
arc-swap = { version = "1.7" } # Making Rust more Rusty

# Observability
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.1" }
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tower-http = { version = "0.3.5", features = ["trace", "cors"] }

# Persistence
sea-orm = { version = "1.1.*", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
migration = { path = "./migration" } # CLI-generated migration dir

# Auth
jsonwebtoken = "8.3.0" # J.R.R. Token support
chrono = "0.4.24" # Timestamp tool

# Password hashing
password-hash = "0.5" # Hash framework
argon2 = "0.5" # Chosen algorithm

# OAS doc and UI support
utoipa = { version = "4.1.0", features = ["axum_extras"] } # add chrono for NaiveDate support
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
